--- a/src/styles/_config_dark.sass
+++ b/src/styles/_config_dark.sass
@@ -1,13 +1,13 @@
 /* Colors */
-$color-background: #EaEbEf
+$color-background: #2c2d33
 $color-background-light: lighten($color-background, 5%)
-$color-background-lighter: lighten($color-background, 15%)
+$color-background-lighter: lighten($color-background, 10%)
 $color-background-dark: darken($color-background, 5%)
 $color-background-darker: darken($color-background, 60%)
 
-$color-text: #4d4e53
+$color-text: #dddee3
 $color-text-dark: $color-text
-$color-text-lighter: #ccc
+$color-text-lighter: #fff
 $color-text-light: rgba($color-text, .8)
 $color-text-hint: rgba($color-text, .5)
 
