Style tweaks to dark theme

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -402,7 +402,7 @@ ul.dropdown-menu
   display: none
   flex-direction: column
   list-style: none
-  margin: 10px 0 0 0
+  margin: 0
   padding: 0
   position: absolute
   top: 100%
@@ -595,7 +595,7 @@ h1 .emoji
         +position-center-translate
         background-color: $color-background
         border-radius: 50%
-        color: $color-background-darker
+        color: $color-text
         padding: 8px
 
   &-title
@@ -803,6 +803,7 @@ $wgt-dropdown-width: 150px
   &-link
     background-color: $color-background-light
     border-top: thin solid $color-background-dark
+    color: $color-text
     display: flex
     padding: 10px 10px
     min-width: $wgt-dropdown-width
