--- a/src/styles/_config_dark.sass
+++ b/src/styles/_config_dark.sass
@@ -11,6 +11,6 @@ $color-text-lighter: #fff
 $color-text-light: rgba($color-text, .8)
 $color-text-hint: rgba($color-text, .5)
 
-$color-primary: #70d7ff
+$color-primary: #00b7bf
 $color-primary-active: hsl(hue($color-primary), 80%, 60%)
-$color-secondary: #e74c3c
+$color-secondary: #ff6c52
