--- a/src/styles/main_dark.sass
+++ b/src/styles/main_dark.sass
@@ -4,6 +4,9 @@
 @import _config_dark
 
 @import ../../../pillar/src/styles/_utils
+@import _utils
+
+// Not cool. It has too many Blender Cloud stuff, needs splitting.
 @import ../../../pillar/src/styles/base
 
 @import _base
