No hard-coded exclamation mark

--- a/src/templates/nodes/custom/dillo_post/edit_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/edit_embed.pug
@@ -119,7 +119,7 @@
 				data-action="publish",
 				title="{{ _('Make post publicly available!') }}")
 					i.pi-check
-					| {{ _('Publish!') }}!
+					| {{ _('Publish') }}
 				| {% else %}
 				button.item-save-publish.btn.publish(
 				data-action="save",
