Night mode: Show button only when not logged in
When we are logged in, show it on dropdown.

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -393,6 +393,14 @@ nav
           &:hover
             transform: scale(1.1)
 
+          &.theme-toggle
+            background-color: $color-background
+            border-radius: 50%
+            color: $color-text
+            cursor: pointer
+            padding: 8px
+
+
 .dropdown-toggle
   cursor: pointer
 
