--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -119,7 +119,7 @@ li
 					li
 						a(href="{{ act.link }}")
 							img.actor-avatar(src="{{ act['actor_user']['email'] | gravatar }}")
-							span.date(title="{{ act._created }}") {{ act._created | pretty_date_time }}
+							span.date(title="{{ act._created }}") {{ act._created | pretty_date }}
 							span.actor {{ act['actor_user']['full_name'] }}
 							span.verb {{ act.verb }}
 					| {% endif %}
@@ -128,13 +128,22 @@ li
 				p {{ _('No activity... yet!') }}
 				| {% endif %}
 
+			.d-communities
+				| {% for community in communities %}
+				a(href="{{ url_for('posts.index', community_url=community.url) }}")
+					img(src="{{ url_for('posts.index', community_url=community.url) }}")
+					| {{ community.name }}
+				| {% endfor %}
 
 		| {% endif %}
+
 
 | {% endblock body %}
 
 | {% block footer_scripts %}
 script.
+
+	Cookies.getJSON('bcloud_moving_node');
 
 	// Check if we're logged in and store it to use later
 	var amAuthenticated = isAuthenticated();
