--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -220,7 +220,9 @@ script.
 								'</a>' +
 							'</li>' +
 						'{{/is_link}}' +
-						'<li>{{ category }}</li>' +
+						'<li>' +
+							'<a class="js-follow-link" href="/c/{{ project.url }}" target="_blank">{{ project.name }}</a>' +
+						'</li>' +
 						'<li class="item-date">{{ created }}</li>' +
 						'<li class="item-author"><a class="js-follow-link" href="/u/{{ user.username }}">{{ user.full_name }}</a></li>' +
 						'{{#comments_count}}' +
