Index: Fix position of Twitter icon

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -525,6 +525,7 @@ h1 .emoji
   &-title
     font-size: 1.8em
     padding: 35px 15px 10px
+    position: relative
     text-align: center
 
     .summary
@@ -535,7 +536,7 @@ h1 .emoji
       position: relative
 
     .social
-      background-color: $color-background-lighter
+      background-color: $color-background-light
       left: 50%
       list-style-type: none
       margin: 5px 0 0
