Lighter background color for comments

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -613,7 +613,7 @@ body[data-context="post-edit"]
 
 
   .comments-container
-    background-color: $color-background
+    background-color: $color-background-light
 
     .sign-in a
       color: var(--community-theme-accent, $color-primary) !important
